# fast_chacha

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.githooks/: pre-commit
.github/workflows/: rust.yml  tests.yml
asm/: README.md  chacha-armv4-macosx.S  chacha-armv4.NOTES  chacha-armv8-masm.asm  chacha-armv8-sve-macosx.S  chacha-armv8-sve.NOTES  chacha-armv8-win64.S  chacha-armv8.NOTES  chacha-mips-n64.S  chacha-mips-o32.S  chacha-mips.NOTES  chacha-x86-linux.S  chacha-x86.NOTES  chacha-x86_64-linux.S  chacha-x86_64-macosx.S  chacha-x86_64-masm.asm  chacha-x86_64.NOTES
src/: fallback_chacha20.rs  lib.rs
src/cpucaps/: arm.rs  fallback.rs  hwcap.rs  mips.rs  mod.rs  powerpc64.rs  riscv64.rs  x86.rs
tests/: README.md  compare.rs  is_using_asm.rs  rfc7539.rs
